--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: worker_gpu_cpu:latest
+    image: worker_cpu:latest
     ports:
       - 8091:8080
     networks:
       - red_ej2
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: "all"
-              capabilities: ["gpu"]
-    runtime: nvidia  # Agrega esta línea
+
 
 
 networks:
