--- a/k8s/deploy-worker.yaml
+++ b/k8s/deploy-worker.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: worker
-        image: leoduville5/worker_cpu:latest
+        image: leoduville5/worker_cpu:v3
         imagePullPolicy: Always
         # resources:
         #   requests:
