--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-COORDINADOR_HOST = http://service-coordinador.default.svc.cluster.local:8080
-POOL_MANAGER_HOST = http://service-poolmanager.default.svc.cluster.local:8080
-RABBITMQ_HOST = service-rabbitmq.default.svc.cluster.local
+COORDINADOR_HOST = http://34.75.92.72:8080
+POOL_MANAGER_HOST = http://34.139.81.224:8080
+RABBITMQ_HOST = 34.23.164.25
 
 #Local
 
