Cambio processing_time

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-COORDINADOR_HOST = http://34.75.92.72:8080
-POOL_MANAGER_HOST = http://34.139.81.224:8080
-RABBITMQ_HOST = 34.23.164.25
+# COORDINADOR_HOST = http://34.75.92.72:8080
+# POOL_MANAGER_HOST = http://34.139.81.224:8080
+# RABBITMQ_HOST = 34.23.164.25
 
 #Local
 
-# COORDINADOR_HOST = http://coordinador:8080
-# RABBITMQ_HOST = rabbit1
-# POOL_MANAGER_HOST=http://poolmanager:8080
+COORDINADOR_HOST = http://coordinador:8080
+RABBITMQ_HOST = rabbit1
+POOL_MANAGER_HOST=http://poolmanager:8080
 
 
