--- a/k8s/deploy-worker.yaml
+++ b/k8s/deploy-worker.yaml
@@ -32,6 +32,16 @@ spec:
         env:
         - name: "PORT"
           value: "8080"
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: worker_cpu-secrets
+              key: REDIS_PASSWORD
+        - name: RABBITMQ_PASS
+          valueFrom:
+            secretKeyRef:
+              name: worker_cpu-secrets
+              key: RABBITMQ_PASS
 
       #   volumeMounts:
       #   - name: maestro-secret-volume
