--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 COORDINADOR_HOST = http://service-coordinador.default.svc.cluster.local:8080
 POOL_MANAGER_HOST = http://service-poolmanager.default.svc.cluster.local:8080
 RABBITMQ_HOST = service-rabbitmq.default.svc.cluster.local
+RABBITMQ_USER = guest
 
 #Local
 
