--- a/k8s/deploy-worker.yaml
+++ b/k8s/deploy-worker.yaml
@@ -20,15 +20,15 @@ spec:
     spec:
       containers:
       - name: worker
-        image: leoduville5/worker_cpu:v13
+        image: leoduville5/worker_cpu:v15
         imagePullPolicy: Always
         resources:
           requests:
-            memory: "128Mi"
-            cpu: "50m"
+            memory: "100Mi"
+            cpu: "150m"
           limits:
-            memory: "512Mi"
-            cpu: "250m"
+            memory: "2048Mi"
+            cpu: "1Gi"
         env:
         - name: "PORT"
           value: "8080"
